[package]
name = "urlfrontier-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# protobuf->Rust compiler
tonic-build = "0.8.3"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
prost = "0.11.3"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
